<resources>
    <string name="app_name">MyLottery</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_preload">PreloadActivity</string>
    <string name="preload_loading">Loading...</string>
    <string name="preload_title">Blink Premium</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Register</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_logged_key">pref_logged</string>
    <string name="pref_title_logged">Logged flag</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_name">Name</string>
    <string name="regiter_text">Required fields</string>
    <string name="register_title">Sign in</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="register_terms">When clicking the button above, you agree with the app\'s &lt;a href=\"http://www.google.com\">Service terms&lt;/a>.</string>
    <string name="error_password_dont_match">passwords doesn\'t match</string>
    <string name="error_name">Must enter a name</string>
    <string name="title_activity_available_coupon_detail">AvailableCouponDetail</string>
    <string name="authenticator_account_name">My Lottery Account</string>
    <string name="authenticator_account_type">br.com.awa.mylottery</string>
    <string name="available_coupon_detail_buy_button">Buy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_coupon_detail">MyCouponDetailActivity</string>
    <!--<string name="gcm_defaultSenderId">441713686253</string>-->
</resources>
